toolchain/internal/core/analysis/testdata/errors/enums/duplicate_member_name.vdl
// @expect: E304

enum Status {
  Active
  Active
}
